[gd_scene load_steps=13 format=1]

[ext_resource path="res://SCRIPTS/Dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://SCRIPTS/Translator.gd" type="Script" id=2]
[ext_resource path="res://SCRIPTS/Dialogue/Bubble.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/GFX/Game/Text/box_tileset.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/GFX/Game/Text/anchor1.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/GFX/Game/Text/confirm_icon.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/SE/System/MSG_SOUND.wav" type="Sample" id=7]
[ext_resource path="res://ASSETS/LANG/FONTS/NotoSans/NotoSans-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://SCRIPTS/TextScroll.gd" type="Script" id=9]

[sub_resource type="SampleLibrary" id=2]

samples/MSG_SOUND = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }

[sub_resource type="Animation" id=3]

resource/name = "Down_Up"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 750, 410 ), Vector2( 750, 420 ), Vector2( 750, 410 ) ] }

[sub_resource type="DynamicFont" id=1]

font/size = 18
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[node name="Dialogue" type="CanvasLayer"]

layer = 6
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )
csv_path = ""
dialogue_context = ""
initial_skin = -1

[node name="Translator" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="Bubble" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 3 )

[node name="Skin" type="Sprite" parent="Bubble"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 30, 350 )
texture = ExtResource( 4 )
centered = false
vframes = 2

[node name="Anchor" type="Sprite" parent="Bubble/Skin"]

transform/pos = Vector2( 37, -49 )
texture = ExtResource( 5 )
centered = false

[node name="ConfirmIcon" type="Sprite" parent="Bubble"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 750, 400 )
texture = ExtResource( 6 )
centered = false

[node name="Click" type="SamplePlayer" parent="Bubble/ConfirmIcon"]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Hover" type="AnimationPlayer" parent="Bubble/ConfirmIcon"]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Down_Up = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextContainer" type="RichTextLabel" parent="Bubble"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 380.0
margin/right = 800.0
margin/bottom = 420.0
custom_fonts/normal_font = SubResource( 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="TextScroll" type="Node" parent="Bubble/TextContainer"]

script/script = ExtResource( 9 )


